changed url munging back to how it was done before. Should actualy build, even if it is not perfect.
git-svn-id: http://svn.osgeo.org/geotools/trunk@3049 e5c1c795-43da-0310-a71f-fac65c449510